@@ -1,6 +1,6 @@
 ''' This implements the full-text indexer using the Xapian indexer.
 '''
-import re, os
+import re, os, time
 
 import xapian
 
@@ -17,7 +17,18 @@ class Indexer(IndexerBase):
 
     def _get_database(self):
         index = os.path.join(self.db_path, 'text-index')
-        return xapian.WritableDatabase(index, xapian.DB_CREATE_OR_OPEN)
+        for n in range(10):
+            try:
+                # if successful return
+                return xapian.WritableDatabase(index, xapian.DB_CREATE_OR_OPEN)
+            except xapian.DatabaseLockError:
+                # adaptive sleep. Get longer as count increases.
+                time_to_sleep = 0.01 * (2 << min(5, n))
+                time.sleep(time_to_sleep)
+                # we are back to the for loop
+
+        # Get here only if we dropped out of the for loop.
+        raise xapian.DatabaseLockError("Unable to get lock after 10 retries on %s."%index)
 
     def save_index(self):
         '''Save the changes to the index.'''
